[package]
name = "v4-proto-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
default = ["wrappers"]
wrappers = ["num-bigint"]

[dependencies]
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
num-bigint = { version = "0.4.5", optional = true }

[build-dependencies]
tonic-buf-build = "0.2.1"
prost-build = "0.12" # keep the version the same as in tonic-buf-build
tonic-build = "0.11" # keep the version the same as in tonic-buf-build